k8s/ingress/nginx-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/upstream-hash-by: "$client_ip"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: express-server-lb
            port:
              number: 8080
      # - pathType: Prefix
      #   path: /
      #   backend:
      #     service:
      #       name: express-server-service
      #       port:
      #         number: 8080
